--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 
-<p>GIT LESSONS</p>
-<p>lol lol olo</p>
-
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At praesentium aspernatur blanditiis nisi, dolorem magnam sint labore dignissimos quasi beatae, facilis dolores voluptate quod, laboriosam.</p>
 
 </body>
 </html>
